--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -15,9 +15,6 @@
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine, func\n",
     "\n",
-    "%matplotlib inline\n",
-    "from matplotlib import style\n",
-    "style.use('bmh')\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "# Python SQL toolkit and Object Relational Mapper\n"
@@ -1109,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,13 +1114,13 @@
     "\n",
     "#june_temp_df = pd.DataFrame(june_temp)\n",
     "#june_temp_df = pd.DataFrame(june_temp,columns[])\n",
-    "june_temp_df = pd.DataFrame(june_temp,columns=['June Temps'])\n",
-    "june_temp_df.set_index(june_temp_df['June Temps'], inplace=True)\n"
+    "june_temp_df = pd.DataFrame(june_temp,columns=['JuneTemps'])\n",
+    "june_temp_df.set_index(june_temp_df['JuneTemps'], inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1144,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>June Temps</th>\n",
+       "      <th>JuneTemps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1188,7 +1185,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        June Temps\n",
+       "         JuneTemps\n",
        "count  1700.000000\n",
        "mean     74.944118\n",
        "std       3.257417\n",
@@ -1199,7 +1196,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2224,7 @@
        " ...]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2239,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2342,7 @@
        "max        83.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
